--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
 <style>
 body{
-	background-image: url("mars.gif");
+	background-image: url("mars.jpg");
     background-position: center;
     background-size: cover;
 }
 #myCanvas
 {
-    margin-top: 30px;
 	border-width:10px;
 	background-color: white; 
 	border-style:ridge;
@@ -19,20 +18,16 @@ h1,h4
 {
 	color: white !important;
 }
-</style>
+</style>		
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-	<title>Moving Rover On Mars</title>
+	<title>Moving Rover On</title>
 </head>
 <body onload="add();">
-
 <center>
 <h1>Moving Rover On Mars</h1>
-	<canvas id="myCanvas" width="800" height="600">
-	</canvas>
+<canvas id="myCanvas" height="600" width="800"></canvas>
 <h4>
 	<b class="text-danger">NOTE : </b> IF ROVER IS NOT VISIABLE PRESS ANY ARROW KEY
 </h4>
